--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,7 +24,7 @@
             <ion-icon name="cash-outline" class="stat-icon"></ion-icon>
             <div class="stat-text">
               <p>Ingresos de la semana</p>
-              <h3>$45.000</h3>
+              <h3>${{ ganancias}}</h3>
             </div>
           </ion-card>
         </ion-col>
@@ -33,7 +33,7 @@
             <ion-icon name="people-outline" class="stat-icon"></ion-icon>
             <div class="stat-text">
               <p>Viajes completados</p>
-              <h3>45</h3>
+              <h3>{{viajesTerminados}}</h3>
             </div>
           </ion-card>
         </ion-col>
