--- a/src/app/misviajes/misviajes.page.html
+++ b/src/app/misviajes/misviajes.page.html
@@ -6,7 +6,7 @@
         <ion-icon name="location" slot="start" class="viaje-icon"></ion-icon>
       </ion-card-header>
 
-      <ion-card-content>
+      <ion-card-content mode="ios">
         <p>Creado por: {{ viaje.nombreCreador | uppercase}}</p>
         <p class="viaje-info">Capacidad: {{ viaje.capacidad }}</p>
         <p class="viaje-info">Costo: {{ viaje.costo }} CLP</p>
@@ -16,8 +16,11 @@
         <!-- Contenedor del mapa -->
         <div id="map-{{ viaje.id }}" class="map-container"></div>
       </ion-card-content>
-
-      <ion-button expand="block" fill="outline" color="danger" (click)="eliminarViaje(viaje.id)">
+      <ion-button expand="block" mode="ios" fill="outline" color="success" (click)="agregarHistorial({ direccion: viaje.destino , precio: viaje.costo },viaje.costo, viaje.id)">
+        Terminar Viaje
+      </ion-button>
+      
+      <ion-button mode="ios" expand="block" fill="outline" color="danger" (click)="eliminarViaje(viaje.id)">
         <ion-icon name="trash" slot="start"></ion-icon>
         Eliminar Viaje
       </ion-button>
