--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -7,7 +7,7 @@
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
       <form class="space-y-6" action="#" method="POST" (ngSubmit)="registro()">
         <div>
-          <label for="email" class="block text-sm/6 font-medium text-gray-900">Nombre</label>
+          <label for="email" class="block text-sm/6 font-medium text-gray-900">Nombre Usuario</label>
           <div class="mt-2">
             <input id="email" name="email" type="email" [(ngModel)]="usr.nombre" autocomplete="email" required
               class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6">
