--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,7 +1,7 @@
 :root {
     --ion-color-primary: #008aff;
     --ion-color-secondary: #FFC107;
-    --ion-color-tertiary: #000c4d;
+    --ion-color-tertiary: linear-gradient(45deg, #8e0fc0, #4e8bf5);
     --ion-color-light: #ffffff;
     --ion-color-dark: #333;
   }
