--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -19,14 +19,19 @@ ion-toolbar{
   border-radius: 50%;
   margin: 5px;
 }
+.setting-icono{
+  padding: 5px;
+  margin-right: 10px;
+  transform: translateY(-15px);
+}
 
 .email-title {
   font-weight: bold;
   font-size: 15px;
 
     p{
-      font-size: 10px;
-      color: #bbbbbb;
+      font-size: 12px;
+      color: #cfcfcf;
     }
 }
 .stat-card {
